<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.5"
    android:background="#F5F5F5"
    tools:context=".FoodItemActivity">

    <ImageView
        android:id="@+id/imageViewFood"
        android:layout_width="420dp"
        android:layout_height="315dp"
        android:contentDescription="@string/imageViewFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewFoodTitle"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:text="@string/textViewFoodTitle"
        android:textColor="#0D3B66"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFood" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/priceHolder"
        android:textColor="#0D3B66"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFood" />

    <TextView
        android:id="@+id/textViewFoodDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/textViewFoodDescription"
        android:textColor="#0D3B66"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFoodTitle" />

    <Button
        android:id="@+id/btnDecrementFoodQuantity"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btnDecrementFoodQuantity"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:backgroundTint="#F95738"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFoodTitle"
        app:layout_constraintEnd_toEndOf="@+id/editFoodQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editFoodQuantity"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginTop="280dp"
        android:background="#F95738"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/editFoodQuantity"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFoodTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewFood" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/textArrowLeft"
        android:textColor="#FFFFFF"
        android:textSize="29sp"
        app:backgroundTint="#F95738"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIncrementFoodQuantity"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btnIncrementFoodQuantity"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:backgroundTint="#F95738"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewFoodTitle"
        app:layout_constraintStart_toStartOf="@+id/editFoodQuantity"
        app:layout_constraintTop_toTopOf="@+id/imageViewFood" />

    <Button
        android:id="@+id/btnAddToOrder"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btnAddToOrder"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#F95738"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoToCheckout"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btnGoToCheckout"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:backgroundTint="#F95738"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>