<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main" />

    <Button
        android:id="@+id/btnViewMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btnMenu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FF0505"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewMain"
        app:layout_constraintEnd_toEndOf="@+id/imgViewMain"
        app:layout_constraintStart_toStartOf="@+id/imgViewMain" />

    <TextView
        android:id="@+id/txtViewVan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="0dp"
        android:text="@string/txtVan"
        android:textColor="#FFFFFF"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnViewMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgViewMain"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/txtViewBites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txtBites"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnViewMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgViewMain"
        app:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/txtViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txtWelcome"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnViewMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgViewMain"
        app:layout_constraintVertical_bias="0.94" />
</androidx.constraintlayout.widget.ConstraintLayout>